# msfs2020checksum

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build_rs.yml
compare_doc/: README.md
src/: main.rs
