[package]
name = "msfs2020checksum"
version = "0.5.2"
edition = "2021"
authors = ["KaneGreen <737445366KG@Gmail.com>"]
license = "BSL-1.0"
include = ["src/", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
dirs = "5.0.0"
walkdir = "2.3.3"
windows = { version = "0.48.0", features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
] }
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

[profile.release]
codegen-units = 1
lto = true
